fix bleed container class

--- a/assets/css/sass/document/_helpers.scss
+++ b/assets/css/sass/document/_helpers.scss
@@ -35,7 +35,8 @@
 }
 .bleed-container {
 	@include susy-media($screen-sm) {
-		@include bleed-x(5vw 5vw);
+		padding-left: 0;
+		padding-right: 0;
 	}
 }
 
