--- a/assets/css/worldstrides.css
+++ b/assets/css/worldstrides.css
@@ -6676,13 +6676,8 @@ p {
 
 @media (min-width: 768px) {
   .bleed-container {
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-    margin-right: -5vw;
-    margin-left: -5vw;
-    padding-right: 5vw;
-    padding-left: 5vw; } }
+    padding-left: 0;
+    padding-right: 0; } }
 
 .bg-gray-base, .bg-gray-darker, .bg-gray-dark, .bg-gray {
   color: #f2f2f4; }
@@ -8471,15 +8466,9 @@ section:after {
     display: table; }
   .section-content:after {
     clear: both; }
-  @media (min-width: 768px) {
-    .section-content.bleed-container {
-      -webkit-box-sizing: content-box;
-      -moz-box-sizing: content-box;
-      box-sizing: content-box;
-      margin-right: -5vw;
-      margin-left: -5vw;
-      padding-right: 5vw;
-      padding-left: 5vw; } }
+  .section-content.bleed-container {
+    padding-right: 0;
+    padding-left: 0; }
   @media (min-width: 768px) {
     .page-template-default .section-content {
       padding-right: 25%; } }
